# speaking-my-prompt

./: .env.example  .gitignore  .voice_alias.sh  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY_SETUP.md  VOICE_COPILOT.md  gui_app.py  live_transcribe_only.py  live_voice_mom.py  mom_cli.py  pyproject.toml  requirements.txt  setup.py  test_e2e_interactive.py
scripts/: build_app.sh
src/lazy_prompt/: cli.py  interactive.py
src/mom_pipeline/: __init__.py  config.py  intake.py  live_capture.py  live_transcribe.py  mom_generate.py  postprocess.py  transcribe.py  utils.py  watcher.py
tests/: test_interactive_flow.py
